<resources>
    <string name="app_name">LeafScan</string>
    <string name="intro_text"><br>LeafScan is innovative application designed for Banana and Papaya leaf health management. It utilizes images of plant leafs analysis to predict prevalent plant diseases like Cordana,Pestalotiopsis,Sigatoka,Anthracnose etc.\n</br><br>\nLeafScan aims to empower farmers, gardening enthusiasts and veterinarians by providing an accessible and efficient tool for early disease detection and proactive plant health management.\n</br><br>\nUsers can click to capture an image and receive immediate predictions, offering a streamlined experience for disease detection and preventive measures.\n</br>
    </string>
    <string name="Use">"         <b>How to Use </b>     "</string>
    <string name="Use_text"><br>1. Capture: Tap the camera icon to take a picture of the banana or papaya plant leaf only.\n</br><br>\n2. Predict: Click the predict button to receive an instant analysis and prediction regarding the plant leaf health.</br>
    </string>
    <string name="Contact">Contact Us</string>
    <string name="Cont_text">For any inquiries and assistance, please feel free to reach out to us via email. Our team will get back to you promptly. Thank you for using our app! </string>
    <string name="instruction_text"><br>1. Upon clicking the button below, you will be directed to a screen featuring a camera button for image capture or an option to upload from your gallery.\n </br>
    <br>\n2. To enhance prediction accuracy, ensure that the image of fruit is clear and has good quality, centered within the frame.\n</br><br>
            \n3. Note that if the app is presented a non-leaf image, it may still generate a prediction, but the prediction results cannot be guaranteed. Users are strongly encouraged to upload only images of banana and papaya leafs for reliable disease detection.\n
        </br>
    </string>
    <string name="image_display">Your Image will be displayed above.</string>
    <string name="capture">Capture</string>
    <string name="upload_image">Upload Image</string>
    <string name="results">Results</string>
    <string name="leafscan">LeafScan</string>
    <string name="search_on_web">Search on Web</string>
    <string name="cancel">Cancel</string>
    <string name="mail_us">Mail Us</string>
    <string name="instructions">Instructions</string>
    <string name="go">Go</string>
    <string name="wrong_image">Please input image of Banana or Papaya leafs only!</string>
    <string name="Cordana">Cordana leaf spot caused by the fungus Cordana musae, has been reported from a number of banana-producing areas throughout the world. Although widely distributed, it is not considered as being of much importance. Typical symptoms of this disease appear as oval, pale brown spots, and as long strips of light brown necrosed tissue sometimes extending from the leaf margins to the midrib. Large areas of the leaf may be destroyed. Diseased leaves may be quite conspicuous as the infected areas are usually surrounded by a bright yellow ororange zone.\n
                    \nControl:\n\n To reduce disease levels, infected leaves should be removed. Monitor plants for symptoms and when required apply a registered fungicide.
            </string>
    <string name="Pestalotiopsis">Pestalotiopsis is a fungus that causes diseases of both the palm leaf petiole and leaf blade, often at the same time. Palm leaf diseases caused by Pestalotia are the same as those caused by Pestalotiopsis.
        The fungus Pestalotiopsis causes leaf spots, petiole/rachis blights and sometimes a bud rot of palms. In other words, unlike the other leaf spot and petiole blight pathogens, which attack either the leaf blade or the leaf petiole,
        Pestalotiopsis attacks all parts of the leaf from base to tip. It is also one of the more ubiquitous fungi in the palm canopy, and is easily isolated from healthy palm tissue.
        \n\nSymptoms:\n\n
        Disease development by Pestalotiopsis can be restricted to only the leaf blade (leaflets or leaf segments) or only the petiole and rachis; or, it can develop on both tissues at the same time. Spots will begin as very small yellow, brown or black spots.
        \n\nControl:\n\n
        Avoiding pests, diseases and weeds by good practice in cultivation methods, cultivar selection, garden hygiene and encouraging or introducing natural enemies, should be the first line of control. If chemical controls are used, they should be used only in a minimal and highly targeted manner."</string>
    <string name="Sigatoka">When spores of M. fijiensis are deposited on a susceptible banana leaf, they germinate within three hours if the humidity is high or a film of water is present. The optimal temperature for germination of the conidia is 27 °C (81 °F).
        The germ tube grows epiphytically over the epidermis for two to three days before penetrating the leaf through a stoma.Black Sigatoka is a leaf spot disease of banana.
        It is an important economic banana disease in many countries around the world. Severely infected leaves can die, significantly reducing fruit yield, and causing mixed and premature ripening of fruit bunches
        \n\nSymptoms:\n\n
        Black Sigatoka is also known as black leaf streak, causing streaks that run parallel to the leaves. It affects banana trees specifically in tropical climates; including Asia, West Africa, China, and South America. Black Sigatoka is a foliar disease of banana caused by the fungus Pseudocercospora fijiensis.
        \n\nControl:\n\n
        There are several ways to control black Sigatoka, either by cultural and chemical means or by genetic engineering.One form of chemical control is preemptive use of fungicides on banana trees in order to protect them from primary inoculum.Leaves that have already been infected must be removed mechanically to save the rest of the tree.                  "</string>
    <string name="HealthyBanana">Banana leaf has a rich source of polyphenols which may act against cancer cells. Fresh banana leaf juice may relieve people with psoriasis (itchy, scaly rashes on the skin). Regular banana leaf juice intake in the morning might reduce cough and cold. Banana leaves are large, flexible, and waterproof. They impart an aroma to food that is cooked in or served on them; steaming with banana leaves imparts a subtle sweet flavour and aroma to the dish. The leaves are not themselves eaten and are discarded after the contents are consumed.</string>
    <string name="Anthracnose">Anthracnose is a term used to loosely describe a group of related fungal diseases that typically cause dark lesions on leaves. In severe cases it may also cause sunken lesions and cankers on twigs and stems.
        Anthracnose affects many deciduous and evergreen trees and shrubs and can also infect vegetables, flowers, fruit, and turfgrass.
        \n\nSymptoms:\n\n
        Anthracnose symptoms vary by plant host and due to weather conditions. On landscape trees, the fungi infect developing shoots and expanding leaves. Small beige, brown, black, or black spots later appear on infected twigs of hosts such as elm, oak, and sycamore.
        Dead areas on leaves can be more irregular on hosts such as ash, maple, and willow, while sycamore and oak anthracnose lesions typically develop along major leaf veins.
        \n\nControl:\n\n
        Avoid planting highly susceptible species including Modesto ash (Fraxinus velutina ‘Modesto’), American sycamore (Platanus occidentalis), and some cultivars of the London plane tree (Platanus x hispanica). California sycamore (Platanus racemosa) is very susceptible to anthracnose which disfigures the tree, giving it a twisted appearance. Pruning. Prune and destroy or bury infected leaves, twigs, and branches during fall or winter. Severe pruning of larger diameter branches is not a good practice for most trees, because it triggers bushy watersprouts, which are poorly attached to the trunk and are susceptible to diseases such as powdery mildew. Sanitation. Rake and dispose of fallen leaves and twigs during the growing season and in fall.     "</string>
    <string name="Bacterial_spot">Bacterial spot is the most destructive leaf disease of capsicum. Black rot of brassica plants often follows infection by bacterial spot.
        \n\nCause:\n\n
        The bacterium Xanthomonas campestris.
        \n\nSymptoms:\n\n
        The first symptoms are usually small, yellow V-shaped areas developing along the leaf margin. These areas soon turn brown and dry out. Vein blackening may extend down the leaves into the petiole and the stem. When the stem is cut across, a black ring will be seen in the water-conducting tissues just below the bark. Soft, rotting organisms often quickly follow the invasion of fleshy leaves and petioles. Black rot bacterium then cause the plants to rot rapidly.</string>
    <string name="curl">Peach leaf curl is a plant disease characterized by distortion and coloration of leaves and is caused by the fungus Taphrina deformans,which infects peach, nectarine, and almond trees. T. deformans is found in the United States, Europe, Asia, Africa, Australia, and New Zealand.Peach leaf curl reduces the amount of leaves and fruit produced by peach and nectarine trees.
        \n\nSymptoms:\n\n
        About two weeks after the leaves emerge, they develop yellow or reddish raised areas. They become distorted and puckered as they grow. The raised areas become red or purple. Leaves often fall off of the tree. The leaves that remain will develop a white powder on them. This powder is velvety spores of the fungus, ready to spread when water splashes on them.
        \n\nControl:\n\n
        The most effective method is to plant peach trees against a house wall under an overhanging roof, possibly covered by a mat during the winter, to keep winter rain from the buds before they burst (and incidentally to delay blossoming until spring frosts are over), until the temperature exceeds 16 °C (61 °F) in the spring, deactivating the fungus. Spraying the leaves with fungicides is the most common control method. The toxicity of these fungicides means they are not legally available to noncommercial growers in some countries. Spraying should be done in the winter well before budding. If trees are not sprayed early enough, treatment is ineffective.</string>
    <string name="ringspot">Papaya ringspot disease causes distinctive symptoms on papaya (pawpaw or papaw) (Carica papaya) plants.Two papaya ringspot biosecurity containment zones legally prevent the spread of papaya ringspot disease out of South East Queensland.  Papaya ringspot is a destructive disease characterized by a yellowing and stunting of the crown of papaya trees, a mottling of the foliage  shoe-stringing of younger leaves, water-soaked streaking of the petioles (stalks), and small darkened rings on the surface of fruit
        \n\nCause:\n\n
        Papaya ringspot disease is caused by a plant virus called Papaya ringspot virus - type P (PRSV-P) which belongs to the genus Potyvirus in the family Potyviridae.Two distinct types of Papaya ringspot virus are known: Papaya ringspot virus - type P (PRSV-P) which infects papaya and cucurbits Papaya ringspot virus - type W (PRSV-W) which only infects cucurbit plants such as cucumber, melon, pumpkin, squash and zucchini.
        \n\nControl:\n\n
        In home gardens within the biosecurity zones, infected plants should be removed as soon as symptoms are noticed.</string>
</resources>