<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="16dp"
    android:elevation="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/cont_text_lyt"
            >
            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/Contact"
                android:textSize="18dp"
                android:textStyle="bold"
                android:layout_marginTop="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginLeft="20dp"
                android:fontFamily="sans-serif"
                >

            </TextView>

            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="25dp"
                android:fontFamily="sans-serif"
                android:text="@string/Cont_text">

            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/cont_text_lyt"
            android:paddingStart="98dp"
            android:paddingBottom="5dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="40dp">
            <Button
                android:id="@+id/cancel_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:background="@android:color/transparent"
                android:textColor="@color/teal_700"
                android:textStyle="bold"
                android:textSize="12dp"
                android:fontFamily="sans-serif">

            </Button>

            <Button
                android:id="@+id/Mail_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mail_us"
                android:background="@android:color/transparent"
                android:textColor="@color/Green"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:textSize="12dp"
                android:fontFamily="sans-serif">

            </Button>
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>